@@ -1,4 +1,4 @@
-﻿#
+#
 # Note: https://www.microsoft.com/language is a good source of system- and UI-specific translations.
 #
 
@@ -5817,89 +5817,33 @@ l:
 "Выдаленне"
 "Trinti"
 
-MAskDeleteFolder
-"Вы хотите удалить папку"
-"Do you wish to delete the folder"
-"Přejete si smazat adresář"
-"Wollen Sie den Ordner löschen"
-"Törölni akarja a mappát?"
-"Czy chcesz usunąć folder"
-"Desea borrar el directorio"
-"Chcete zmazať priečinok"
-"Vuoi Eliminare La Cartella"
-"Ви бажаєте видалити папку"
-"Вы жадаеце выдаліць каталог"
-"Ar norite ištrinti katalogą"
-
-MAskDeleteFile
-"Вы хотите удалить файл"
-"Do you wish to delete the file"
-"Přejete si smazat soubor"
-"Wollen Sie die Datei löschen"
-"Törölni akarja a fájlt?"
-"Czy chcesz usunąć plik"
-"Desea borrar el archivo"
-"Chcete zmazať súbor"
-"Vuoi Eliminare Il File"
-"Ви бажаєте видалити файл"
-"Вы жадаеце выдаліць файл"
-"Ar norite ištrinti failą"
-
 MAskDelete
-"Вы хотите удалить"
-"Do you wish to delete"
-"Přejete si smazat"
-"Wollen Sie folgendes Objekt löschen"
-"Törölni akar"
-"Czy chcesz usunąć"
-"Desea borrar estos"
-"Chcete zmazať"
-"Vuoi Eliminare"
-"Ви бажаєте видалити"
-"Вы жадаеце выдаліць"
-"Ar norite ištrinti"
-
-MAskDeleteRecycleFolder
-"Вы хотите переместить в Корзину папку"
-"Do you wish to move to the Recycle Bin the folder"
-"Přejete si přesunout adresář do Koše"
-"Wollen Sie den Ordner in den Papierkorb verschieben"
-"A Lomtárba akarja dobni a mappát?"
-"Czy chcesz przenieść folder do Kosza"
-"Desea mover hacia la Papelera de Reciclaje el directorio"
-"Chcete presunúť do Koša priečinok"
-"Vuoi Spostare La Cartella Nel Cestino"
-"Ви бажаєте перемістити в Кошик папку"
-"Вы жадаеце перанесці каталог у Сметнік"
-"Ar norite perkelti į Recycle Bin katalogą"
-
-MAskDeleteRecycleFile
-"Вы хотите переместить в Корзину файл"
-"Do you wish to move to the Recycle Bin the file"
-"Přejete si přesunout soubor do Koše"
-"Wollen Sie die Datei in den Papierkorb verschieben"
-"A Lomtárba akarja dobni a fájlt?"
-"Czy chcesz przenieść plik do Kosza"
-"Desea mover hacia la Papelera de Reciclaje el archivo"
-"Chcete presunúť do Koša súbor"
-"Vuoi Spostare Il File Nel Cestino"
-"Ви бажаєте перемістити в Кошик файл"
-"Вы жадаеце перанесці файл у Сметнік"
-"Ar norite perkelti į Recycle Bin failą"
+"Вы хотите удалить {0}?"
+"Do you wish to delete {0}?"
+"Přejete si smazat {0}?"
+"Wollen Sie {0} löschen?"
+"Törölni akarja {0}?"
+"Czy chcesz usunąć {0}?"
+"¿Desea borrar {0}?"
+"Chcete zmazať {0}?"
+"Vuoi Eliminare {0}?"
+"Ви бажаєте видалити {0}?"
+"Вы жадаеце выдаліць {0}?"
+"Ar norite ištrinti {0}?"
 
 MAskDeleteRecycle
-"Вы хотите переместить в Корзину"
-"Do you wish to move to the Recycle Bin"
-"Přejete si přesunout do Koše"
-"Wollen Sie das Objekt in den Papierkorb verschieben"
-"A Lomtárba akar dobni"
-"Czy chcesz przenieść do Kosza"
-"Desea mover hacia la Papelera de Reciclaje"
-"Chcete presunúť do Koša"
-"Vuoi Spostare Nel Cestino"
-"Ви бажаєте перемістити в Кошик"
-"Вы жадаеце перанесці у Сметнік"
-"Ar norite perkelti į Recycle Bin"
+"Вы хотите переместить {0} в Корзину?"
+"Do you wish to move {0} to the Recycle Bin?"
+"Přejete si přesunout {0} do Koše?"
+"Wollen Sie {0} in den Papierkorb verschieben?"
+"A Lomtárba akarja dobni {0}?"
+"Czy chcesz przenieść {0} do Kosza?"
+"¿Desea mover {0} hacia la Papelera de Reciclaje?"
+"Chcete presunúť {0} do Koša?"
+"Vuoi Spostare {0} Nel Cestino?"
+"Ви бажаєте перемістити {0} в Кошик?"
+"Вы жадаеце перанесці {0} у Сметнік?"
+"Ar norite perkelti {0} į Recycle Bin?"
 
 MDeleteWipeTitle
 "Уничтожение"
@@ -5915,47 +5859,61 @@ MDeleteWipeTitle
 "Знішчэнне"
 "Išvalyti"
 
-MAskWipeFolder
-"Вы хотите уничтожить папку"
-"Do you wish to wipe the folder"
-"Přejete si vymazat adresář"
-"Wollen Sie den Ordner sicher löschen"
-"Ki akarja söpörni a mappát?"
-"Czy chcesz wymazać folder"
-"Desea destruir el directorio"
-"Chcete vymazať priečinok"
-"Vuoi Distruggere La Cartella"
-"Ви бажаєте знищити папку"
-"Вы жадаеце знішчыць каталог"
-"Ar norite išvalyti katalogą"
-
-MAskWipeFile
-"Вы хотите уничтожить файл"
-"Do you wish to wipe the file"
-"Přejete si vymazat soubor"
-"Wollen Sie die Datei sicher löschen"
-"Ki akarja söpörni a fájlt?"
-"Czy chcesz wymazać plik"
-"Desea destruir el archivo"
-"Chcete vymazať súbor"
-"Vuoi Distruggere Il File"
-"Ви бажаєте знищити файл"
-"Вы жадаеце знішчыць файл"
-"Ar norite išvalyti failą"
-
 MAskWipe
-"Вы хотите уничтожить"
-"Do you wish to wipe"
-"Přejete si vymazat"
-"Wollen Sie das Objekt sicher löschen"
-"Ki akar söpörni"
-"Czy chcesz wymazać"
-"Desea destruir"
-"Chcete vymazať"
-"Vuoi Distruggere"
-"Ви бажаєте знищити"
-"Вы жадаеце знішчыць"
-"Ar norite išvalyti"
+"Вы хотите уничтожить {0}?"
+"Do you wish to wipe {0}?"
+"Přejete si vymazat {0}?"
+"Wollen Sie {0} sicher löschen?"
+"Ki akarja söpörni {0}?"
+"Czy chcesz wymazać {0}?"
+"¿Desea destruir {0}?"
+"Chcete vymazať {0}?"
+"Vuoi Distruggere {0}?"
+"Ви бажаєте знищити {0}?"
+"Вы жадаеце знішчыць {0}?"
+"Ar norite išvalyti {0}?"
+
+MAskDeleteFolder
+"папку"
+"the folder"
+"adresář"
+"den Ordner"
+"a mappát"
+"folder"
+"el directorio"
+"priečinok"
+"La Cartella"
+"папку"
+"каталог"
+"katalogą"
+
+MAskDeleteFile
+"файл"
+"the file"
+"soubor"
+"die Datei"
+"a fájlt"
+"plik"
+"el archivo"
+"súbor"
+"Il File"
+"файл"
+"файл"
+"failą"
+
+MAskDeleteObjects
+"объекты"
+"the objects"
+"objekty"
+"die Objekte"
+"az objektumokat"
+"obiekty"
+"los objetos"
+"objekty"
+"gli oggetti"
+"об'єкти"
+"аб'екты"
+"objektus"
 
 MAskDeleteLink
 "cсылка на"
@@ -5971,89 +5929,19 @@ upd:"Un Link Simbolico Ad"
 "спасылка на"
 upd:"a link to"
 
-MAskDeleteLinkFolder
-"папку"
-"folder"
-"adresář"
-"Ordner"
-"mappa"
-"folder"
-"directorio"
-"priečinok"
-"Una Cartella"
-"папку"
-"каталог"
-upd:"folder"
-
-MAskDeleteLinkFile
-"файл"
-"file"
-"soubor"
-"Datei"
-"fájl"
-"plik"
-"archivo"
-"súbor"
-"Un File"
-"файл"
-"файл"
-upd:"file"
-
-MAskDeleteItems
-"{0} элемент{1}"
-"{0} item{1}"
-"{0} polož{1}"
-"{0} Objekt{1}"
-"{0} elemet{1}"
-"{0} plik{1}"
-"{0} ítem{1}:"
-"{0} polož{1}"
-"{0} Oggett{1}"
-"{0} елемент{1}"
-"{0} элемент{1}"
-"{0} failu{1}"
-
-MAskDeleteItems0
-""
-""
-"ku"
-""
-""
-""
-""
-"ku"
-""
-""
-""
-""
-
-MAskDeleteItemsA
-"а"
-"s"
-"ky"
-"e"
-""
-"i"
-"s"
-"ky"
-"o"
-"и"
-"а"
-upd:"s"
-
-MAskDeleteItemsS
-"ов"
-"s"
-"ek"
-"e"
-""
-"ów"
-"s"
-"iek"
-"i"
-"ів"
-"аў"
-upd:"s"
+MAskDeleteAndMore
+"…и ещё {0}"
+"…and {0} more"
+"…a dalších {0}"
+"…und {0} mehr"
+"…és még {0}"
+"…i {0} więcej"
+"…y {0} más"
+"…a ďalších {0}"
+"…e altri {0}"
+"…і ще {0}"
+"…і яшчэ {0}"
+"…ir dar {0}"
 
 MDeleteFolderTitle
 l:
